@@ -10,8 +10,8 @@
 //====================================================================================
 
 @session_start();
-define("GUI_VER", "6007");												// Version of the database
-define("GUI_VER_SHOW","2.0.4");        									// Version of the GUI
+define("GUI_VER", "6008");												// Version of the database
+define("GUI_VER_SHOW","2.0.5");        									// Version of the GUI
 define("MAC_FILE", "files/oui.txt");									// File containing MAC database
 define("DEFAULT_LANGUAGE","english");    								// Default language
 define("PAG_INDEX","function");         								// define name in url (like multi=32)
